# MagicTray

./: .gitignore  Cargo.toml  README.md
HardwareMonitor.Core/: CPUMonitor.cpp  CPU_Monitor.cpp  CPU_Monitor.h  GPUMonitor.cpp  GPUTemp.cpp  GPU_Monitor.cpp  GPU_Monitor.h  HardwareMonitor.Core.def  HardwareMonitor.Core.vcxproj
SystemCore.Hardware/: CMakeLists.txt  vcpkg.json
SystemCore.Hardware/include/: system_monitor.h
SystemCore.Hardware/src/: main.cpp  system_monitor.cpp
SystemMonitor.GUI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NativeMonitor.cs  SystemMonitor.GUI.csproj  TaskbarWidget.xaml  TaskbarWidget.xaml.cs  TrayIconManager.cs
src/: main.rs
src/system_monitor/: cpu.rs  gpu.rs  mod.rs  ram.rs
